-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0 Beta1, 6.5.0 Beta2
-
None
-
cb9ae6ace (6.5)
qdbusxml2cpp generates cpp with invalid include since 6.5.0b1. For example, with this XML input:
<!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN" "http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd"> <!-- SPDX-License-Identifier: CC0-1.0 SPDX-FileCopyrightText: none --> <node> <interface name="org.kde.KIOFuse.VFS"> <method name="remoteUrl"> <arg type="s" direction="out"/> <arg name="localPath" type="s" direction="in"/> </method> <method name="mountUrl"> <arg name="remoteUrl" type="s" direction="in"/> <arg type="s" direction="out"/> </method> </interface> </node>
Using the following command:
qdbusxml2cpp -N -m -p org.kde.KIOFuse.VFS test.xml
The output cpp contains an #include line that refers to a non-existent file (with a seemingly incomplete name):
#include "moc_org.cpp"
This has actually been fixed with https://codereview.qt-project.org/c/qt/qtbase/+/448711 but the cherry-picking process failed, so it still affects the 6.5 branch.
For Gerrit Dashboard: QTBUG-110744 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
451973,4 | dbus: Fix path to moc file in generated qdbusxml2cpp | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |